# minimfc

./: .gitignore  CMakeLists.txt  README.md  main.cpp  main.rc  main_app.cpp  main_app.h  main_frame.cpp  main_frame.h  minimfc.sln  minimfc.vcxproj  resource.h
.github/workflows/: main.yml
